infra/k8s/client-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients-depl
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: clients
  template:
    metadata:
      labels:
        app: clients
    spec:
      containers:
        - name: clients
          image: shankitanki/client
---
apiVersion: v1
kind: Service
metadata: 
  name: clients-srv
spec:
  selector:
    app: clients
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 3000
      targetPort: 3000
