infra/k8s/eventbus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-depl
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
        - name: eventbus
          image: shankitanki/eventbus
---
apiVersion: v1
kind: Service
metadata: 
  name: eventbus-srv
spec:
  selector:
    app: eventbus
  type: ClusterIP
  ports:
    - name: eventbus
      protocol: TCP
      port: 5000
      targetPort: 5000
