infra/k8s/moderate-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderate-depl
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: moderate
  template:
    metadata:
      labels:
        app: moderate
    spec:
      containers:
        - name: moderate
          image: shankitanki/moderate
---
apiVersion: v1
kind: Service
metadata: 
  name: moderate-srv
spec:
  selector:
    app: moderate
  type: ClusterIP
  ports:
    - name: moderate
      protocol: TCP
      port: 4003
      targetPort: 4003
